# ZzZ

./: .gitignore  Cargo.toml  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.cargo/: config.toml
.claw/sessions/ae0cccb8b49d75c5/: session-1776925442553-0.jsonl  session-1776925536127-0.jsonl  session-1776925825320-0.jsonl
.github/workflows/: bootstrap.yml  build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/zzz/vpn/: MainActivity.kt
app/src/main/java/com/zzz/vpn/jni/: ZzzCore.kt
app/src/main/java/com/zzz/vpn/model/: Models.kt
app/src/main/java/com/zzz/vpn/receiver/: BootReceiver.kt
app/src/main/java/com/zzz/vpn/service/: DnsCryptService.kt  I2pService.kt  TorService.kt  ZzzVpnService.kt
app/src/main/java/com/zzz/vpn/ui/: ZzzApp.kt
app/src/main/java/com/zzz/vpn/ui/screens/: HomeScreen.kt  OtherScreens.kt  TorScreen.kt
app/src/main/java/com/zzz/vpn/ui/theme/: ZzzTheme.kt
app/src/main/java/com/zzz/vpn/util/: PrefsManager.kt
app/src/main/java/com/zzz/vpn/viewmodel/: MainViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
config/: dnscrypt-proxy.toml  i2pd.conf  torrc
scripts/: gen_icon.py  gen_icons.py  push.sh
src/: main.rs
src/core/: binary_manager.rs  config_manager.rs  mod.rs  proxy_chain.rs  security.rs  sni_spoof.rs  tun_engine.rs
src/ui/: app.rs
zzz-core/: Cargo.toml
zzz-core/src/: lib.rs
zzz-core/src/dns_mgr/: mod.rs
zzz-core/src/i2p_mgr/: mod.rs
zzz-core/src/proxy/: socks5.rs
zzz-core/src/sni/: mod.rs
zzz-core/src/tor_mgr/: mod.rs
zzz-core/src/tun/: mod.rs
