[package]
name = "zzz-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = { version = "0.12", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tun = "0.6"
bytes = "1.5"
futures = "0.3"
trust-dns-resolver = "0.23"
socket2 = "0.5"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
ctrlc = "3.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
