[package]
name = "zzz-core"
version = "1.0.0"
edition = "2021"

[lib]
name = "zzz_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
log = "0.4"
android_logger = "0.13"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"

# TLS / SNI
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# Networking
socket2 = { version = "0.5", features = ["all"] }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }

# Process management (for tor/i2pd/dnscrypt-proxy binaries)
nix = { version = "0.27", features = ["process", "signal", "fs"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
